--- a/tasks/templates/tasks/bulk_import.html
+++ b/tasks/templates/tasks/bulk_import.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-6">
                 <div class="card">
                     <div class="card-header">
                         <h5>Импорт из JSON файла</h5>
@@ -62,28 +62,50 @@
                 </div>
             </div>
             
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="card">
                     <div class="card-header">
-                        <h6>Формат JSON файла</h6>
+                        <h5>Сессии импорта</h5>
                     </div>
                     <div class="card-body">
-                        <p class="small">JSON файл должен содержать массив объектов. Используются поля:</p>
-                        <ul class="small">
-                            <li><strong>text</strong> - текст задания (HTML)</li>
-                            <li><strong>key</strong> - правильный ответ</li>
-                            <li><strong>difficulty</strong> - сложность (0=легкая, 1=средняя, 2=сложная)</li>
-                        </ul>
-                        <p class="small text-muted">Остальные поля игнорируются</p>
-                        
-                        <h6 class="mt-3">Пример:</h6>
-                        <pre class="small bg-light p-2 rounded"><code>[
-  {
-    "text": "&lt;p&gt;Текст задания...&lt;/p&gt;",
-    "key": "ответ",
-    "difficulty": 0
-  }
-]</code></pre>
+                        {% if sessions %}
+                            <div class="list-group">
+                                {% for session in sessions %}
+                                <div class="list-group-item">
+                                    <div class="d-flex w-100 justify-content-between">
+                                        <h6 class="mb-1">{{ session.name }}</h6>
+                                        <small>{{ session.created_at|date:"d.m.Y H:i" }}</small>
+                                    </div>
+                                    <p class="mb-1">
+                                        <strong>Тип:</strong> {{ session.get_task_type_display }}<br>
+                                        {% if session.subtype %}
+                                            <strong>Подтип:</strong> {{ session.subtype }}<br>
+                                        {% endif %}
+                                        <strong>Заданий:</strong> {{ session.tasks_count }}<br>
+                                        <strong>Автор:</strong> {{ session.created_by.get_full_name|default:session.created_by.username }}
+                                    </p>
+                                    {% if session.description %}
+                                        <small class="text-muted">{{ session.description }}</small><br>
+                                    {% endif %}
+                                    <div class="mt-2">
+                                        <a href="{% url 'task_list' %}?import_session={{ session.id }}" class="btn btn-outline-primary btn-sm me-2">
+                                            Просмотреть задания
+                                        </a>
+                                        {% if session.tasks_count > 0 %}
+                                            <a href="{% url 'delete_session_tasks' session.id %}" class="btn btn-outline-danger btn-sm">
+                                                Удалить все задания
+                                            </a>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            <div class="text-center text-muted">
+                                <p>Сессий импорта пока нет</p>
+                                <small>Загрузите задания из JSON файла, чтобы создать первую сессию</small>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
