--- a/tasks/templates/tasks/task_detail.html
+++ b/tasks/templates/tasks/task_detail.html
@@ -8,7 +8,7 @@
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2>Задание #{{ task.id }}</h2>
             <div>
-                <a href="{% url 'task_list' %}" class="btn btn-outline-secondary me-2">← К списку заданий</a>
+                <a href="{{ return_url }}" class="btn btn-outline-secondary me-2">← К списку заданий</a>
                 {% if current_user.role == 'admin' or task.created_by == current_user %}
                     <a href="{% url 'edit_task' task.id %}" class="btn btn-primary me-2">Редактировать</a>
                     <a href="{% url 'delete_task' task.id %}" class="btn btn-danger">Удалить</a>
@@ -27,7 +27,6 @@
                 </div>
                 
                 <div class="mb-4">
-                    <h5>Текст задания:</h5>
                     <div class="p-3 bg-light rounded">
                         {% if task.is_html %}
                             <div class="task-html-content">{{ task.text|safe }}</div>
@@ -48,7 +47,6 @@
                 
                 {% if task.file %}
                     <div class="mb-4">
-                        <h5>Файл для решения:</h5>
                         <div>
                             <a href="{{ task.file.url }}" class="btn btn-outline-primary" download>
                                 <i class="bi bi-download"></i> Скачать файл
@@ -60,7 +58,7 @@
                 
                 <div class="alert alert-success">
                     <h5>Правильный ответ:</h5>
-                    <div class="mt-2">{{ task.correct_answer|linebreaks }}</div>
+                    <div class="mt-2 task-answer">{{ task.correct_answer|safe }}</div>
                 </div>
                 
                 <div class="mt-4 pt-3 border-top">
